--- a/reales/index.html
+++ b/reales/index.html
@@ -74,7 +74,7 @@
                 
                 <!-- contact starts -->
                 <div class="dtr-header-contact dtr-ml-50 dtr-mt-5">
-                    <p><a href="#"> <i class="icon-phone-call dtr-mr-5 color-dark-blue"></i> 91+ 123456789 </a></p>
+                    <p><a href="tel:+91123456789"> <i class="icon-phone-call dtr-mr-5 color-dark-blue"></i> 91+ 123456789 </a></p>
                 </div>
                 <!-- contact ends --> 
                 
